--- a/src/views/templates/admin/usersPanel.ejs
+++ b/src/views/templates/admin/usersPanel.ejs
@@ -5,6 +5,7 @@
 
 <head>
   <title>Admin Panel - Users</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
   <link rel="stylesheet" href="/css/sectionTitle.css">
   <link rel="stylesheet" href="/css/alert.css">
   <link rel="stylesheet" href="/css/navbar.css">
