--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -1,51 +1,43 @@
 /* navbar.css  */
-
-ul {
-    list-style: none;
+/* Basic reset for list styles */
+.navbar ul {
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
-nav {
-    background-color: #333;
+/* Style for the navbar */
+.navbar {
+    background-color: rgba(0, 0, 0, 0.8); /* Transparent black */
+    width: 100%;
+    border-radius: 15px; /* Rounded corners */
+    padding: 10px; /* Add padding for space inside */
 }
 
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-nav ul li {
+.navbar ul li {
     display: inline-block;
     margin-right: 20px;
 }
 
-nav ul li:last-child {
-    margin-right: 0;
-}
-
-a {
+.navbar ul li a {
     text-decoration: none;
     color: white;
-    font-weight: bold;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease-in-out; /* Smooth color transition */
 }
 
-a:hover {
-    color: #44c767;
+.navbar ul li a:hover {
+    color: #00ff00; /* Change color on hover */
 }
 
 /* Responsive Styles ==============================================*/
 @media screen and (max-width: 600px) {
-    .nav-container {
+    .navbar ul {
+        display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
-    ul li {
+    .navbar ul li {
         margin-bottom: 10px;
         margin-right: 0;
     }
