--- a/src/views/templates/courseUpdate/courseUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseUpdate.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <title>Edit Course</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/courseUpdate.css">
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
