--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -1,23 +1,20 @@
-<nav class="cool-navbar">
+<nav class="navbar">
     <div class="nav-container">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/api/courses">Courses</a></li>
-        <% if (user && user.name) { %>
-            <li class="user-info">Welcome, <%= user.name %>!</li>
-            <li><a href="/api/courses-owned">My courses</a></li>
-            <% if (user.role === "admin") { %>
-                <li><a href="/api/course/create">Create Course</a></li>
-                <li><a href="/api/admin/users">Users Panel |</a></li>
+        <ul>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/api/courses"><i class="fas fa-book"></i> Courses</a></li>
+            <% if (user && user.name) { %>
+                <li class="user-info">Welcome, <%= user.name %>!</li>
+                <li><a href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a></li>
+                <% if (user.role === "admin") { %>
+                    <li><a href="/api/course/create"><i class="fas fa-plus-circle"></i> Create Course</a></li>
+                    <li><a href="/api/admin/users"><i class="fas fa-users-cog"></i> Users Panel</a></li>
+                <% } %>
+                <li><a href="/api/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            <% } else { %>
+                <li><a href="/api/login"><i class="fas fa-sign-in-alt"></i> Sign in</a></li>
+                <li><a href="/api/signup"><i class="fas fa-user-plus"></i> Signup</a></li>
             <% } %>
-        
-        <li><a href="/api/logout">Logout</a></li>
-
-        <% } else { %>
-            <li><a href="/api/login">Sign in</a></li>
-            <li><a href="/api/signup">Signup</a></li>
-        <% } %>
-      </ul>
+        </ul>
     </div>
-  </nav>
-  
+</nav>
