--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -36,7 +36,7 @@
                             <%= course.description %>
                         </p>
                     </a>
-                    <div>
+                    <div class="course-actions">
                         <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
                         <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
                         </p>
