--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -10,45 +10,42 @@
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/courseOverview.css">
+    <link rel="stylesheet" href="/css/sectionTitle.css">
+
 </head>
 
 <body>
     <%- include ('navbar') -%>
         <%- include ('alert') -%>
-            <div class="course-container">
-                <button>
-                    <a href="/api/courses">Go back to All Courses</a>
-                </button>
-                <hr>
-                <div class='course-overview'>
+        <div class="course-container">
+            <div class='course-overview'>
+                <div class="section-title">
                     <h1>Course Overview</h1>
-                    <hr>
-                    
-                    <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
-
-                    <h2>
-                        <%= course.title %>
-                    </h2>
-                    <p>
-                        <%= course.description %>
-                    </p>
-                    <div>
-                        <p>Instructor: <%= course.instructor %>
-                        </p>
-                        <p>Duration: <%= course.length %>
-                        </p>
-                        <p>Price: USD<%= course.usd_price %> | ARS<%= course.ars_price %></p>
-                        </p>
-                    </div>
-                    <br>
                 </div>
                 <hr>
+                
+                <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
+        
+                <h2>
+                    <%= course.title %>
+                </h2>
+                <p>
+                    <%= course.description %>
+                </p>
+                <div class="course-details">
+                    <p>Instructor: <%= course.instructor %></p>
+                    <p>Duration: <%= course.length %></p>
+                    <p>Price: <span class="price-usd">USD<%= course.usd_price %></span> | <span class="price-ars">ARS<%= course.ars_price %></span></p>
+                </div>
+                <br>
                 <div class='course-enrollment'>
                     <button>
                         <a href="/api/course/<%= course.id %>/enroll">Enroll</a>
                     </button>
                 </div>
             </div>
+        </div>
+        
 </body>
 
 </html>
