--- a/src/public/css/courseEnroll.css
+++ b/src/public/css/courseEnroll.css
@@ -1,20 +1,109 @@
+/* General Styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+/* Section Title */
+.section-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.section-title h1 {
+    font-size: 2.5em;
+    color: #333;
+}
+
+/* Course Overview */
 .course-overview {
     text-align: center;
+    margin: 0 auto;
+    max-width: 600px;
 }
+
+.course-overview img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.course-overview h2 {
+    font-size: 1.8em;
+    color: #444;
+    margin-bottom: 15px;
+}
+
+.course-overview div {
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    color: #666;
+}
+
+.course-overview p {
+    font-size: 1em;
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.course-overview .price-text {
+    font-weight: bold;
+    font-size: larger;
+}
+
+/* Payment Options */
 .payment-options {
     text-align: center;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.payment-options h2 {
+    font-size: 1.8em;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.payment-options form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px; /* Adjust the spacing between buttons */
+}
+
 .payment-options button {
-    padding: 10px 20px;
-    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 24px;
+    font-size: 1em;
+    font-weight: bold;
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 10px;
 }
-.payment-options button a {
-    text-decoration: none;
-    color: white;
+
+.payment-options button:hover {
+    background-color: #45a049;
+}
+
+.payment-options button img {
+    width: 24px; /* Adjust the size of the image icon */
+    height: auto;
+    margin-right: 10px; /* Provide some space between the icon and text */
+}
+
+.payment-options button span {
+    margin: 0;
+    font-size: 1em;
 }
