--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -4,49 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Details</title>
-    <link rel="stylesheet" href="css/courseEnroll.css">
+    <link rel="stylesheet" href="/css/courseEnroll.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/sectionTitle.css">
+    <link rel="stylesheet" href="/css/alert.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
-    <button>
-        <a href="/api/courses">Go back to All Courses</a>
-    </button>
-    <hr>
+    <%- include ('navbar') -%>
+    <%- include ('alert') -%>
+
     <div class='course-overview'>
-        <h1>Payment Details</h1>
-        <hr>
-        <br>
-        <!-- Payment Details -->
-        <img src="<%= course.image %>" alt="<%= course.title %> Image">
-        <br>
+        <div class="section-title">
+            <h1>Payment Details</h1>
+        </div>
+            <!-- Payment Details -->
+        <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
         <h2><%= course.title %></h2>
         <div>
             <p>Instructor: <%= course.instructor %></p>
             <p>Duration: <%= course.length %></p>
-            <p>Price: USD<%= course.usd_price %> | ARS<%= course.ars_price %></p>
+            <p class="price-text">USD<%= course.usd_price %> | ARS<%= course.ars_price %></p>
         </div>
-        <br>
-        <p><%= course.description %></p>
-        <br>
     </div>
-    <hr>
+
     <div class='payment-options'>
         <!--course enroll-->
-        <h2>Total Amount: $<%= course.price %></h2>
         <!-- The form to trigger the payment -->
         <form action="/api/create-order-paypal?courseId=<%= course.id %>" method="POST">
             <!-- Hidden input to pass the course slug to the server -->
             <input type="hidden" name="courseId" value="<%= course.id %>">
             <input type="hidden" name="userId" value="<%= userId %>">
-            <button type="submit">Continue with Paypal</button>
+            <button type="submit">
+                <img src="/images/paypal.png" alt="paypal-icon">
+                <p>Continue with Paypal</p>
+            </button>
         </form>
-        <br>
         <form action="/api/create-order-mp?courseId=<%= course.id %>" method="POST">
             <!-- Hidden input to pass the course slug to the server -->
             <input type="hidden" name="courseId" value="<%= course.id %>">
             <input type="hidden" name="userId" value="<%= userId %>">
-            <button type="submit">Continue with Mercado Pago</button>
+            <button type="submit">
+                <img src="/images/mercado-pago.png" alt="mercado-pago-icon">
+                <p>Continue with Mercado Pago</p>
+            </button>
         </form>
     </div>
 </body>
