--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -1,20 +1,53 @@
-<nav class="navbar">
-    <div class="nav-container">
-        <ul>
-            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="/api/courses"><i class="fas fa-book"></i> Courses</a></li>
-            <% if (user && user.name) { %>
-                <li class="user-info">Welcome, <%= user.name %>!</li>
-                <li><a href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a></li>
-                <% if (user.role === "admin") { %>
-                    <li><a href="/api/course/create"><i class="fas fa-plus-circle"></i> Create Course</a></li>
-                    <li><a href="/api/admin/users"><i class="fas fa-users-cog"></i> Users Panel</a></li>
-                <% } %>
-                <li><a href="/api/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-            <% } else { %>
-                <li><a href="/api/login"><i class="fas fa-sign-in-alt"></i> Sign in</a></li>
-                <li><a href="/api/signup"><i class="fas fa-user-plus"></i> Signup</a></li>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/api/courses"><i class="fas fa-book"></i> Courses</a>
+          </li>
+
+          <!-- signedin links -->
+          <% if (user && user.name) { %>
+            <li class="nav-item">
+                <a class="nav-link" href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a>
+            </li>
+
+          <!-- admin links -->
+            <% if (user.role === "admin") { %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Admin Settings
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Create course</a></li>
+                    <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Users panel</a></li>
+                    </ul>
+                </li>
             <% } %>
+            <!-- sign out -->
+            <li class="nav-item">
+                <a class="nav-link" href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a>
+            </li>
+          <% } %>
+        <!-- sign in -->
+        <li class="nav-item">
+            <a class="nav-link" href="/api/login"><i class="fas fa-graduation-cap"></i><i class="fas fa-sign-in-alt"></i> Signin</a>
+        </li>
+        <!-- sign up -->
+        <li class="nav-item">
+            <a class="nav-link" href="/api/signup"><i class="fas fa-graduation-cap"></i><i class="fas fa-user-plus"></i> Signup</a>
+        </li>
+
+        
         </ul>
+      </div>
     </div>
-</nav>
+  </nav>
