--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -1,55 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Details</title>
-    <link rel="stylesheet" href="/css/courseEnroll.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/sectionTitle.css">
-    <link rel="stylesheet" href="/css/alert.css">
-    <link rel="stylesheet" href="/css/navbar.css">
-</head>
-<body>
-    <%- include ('navbar') -%>
-    <%- include ('alert') -%>
-
-    <div class='course-overview'>
-        <div class="section-title">
-            <h1>Payment Details</h1>
-        </div>
-            <!-- Payment Details -->
-        <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
-        <h2><%= course.title %></h2>
-        <div>
-            <p>Instructor: <%= course.instructor %></p>
-            <p>Duration: <%= course.length %></p>
-            <p class="price-text">USD<%= course.usd_price %> | ARS<%= course.ars_price %></p>
-        </div>
+<div class='course-overview'>
+    <div class="section-title">
+        <h1>Payment Details</h1>
     </div>
-
-    <div class='payment-options'>
-        <!--course enroll-->
-        <!-- The form to trigger the payment -->
-        <form action="/api/create-order-paypal?courseId=<%= course.id %>" method="POST">
-            <!-- Hidden input to pass the course slug to the server -->
-            <input type="hidden" name="courseId" value="<%= course.id %>">
-            <input type="hidden" name="userId" value="<%= userId %>">
-            <button type="submit">
-                <img src="/images/paypal.png" alt="paypal-icon">
-                <p>Continue with Paypal</p>
-            </button>
-        </form>
-        <form action="/api/create-order-mp?courseId=<%= course.id %>" method="POST">
-            <!-- Hidden input to pass the course slug to the server -->
-            <input type="hidden" name="courseId" value="<%= course.id %>">
-            <input type="hidden" name="userId" value="<%= userId %>">
-            <button type="submit">
-                <img src="/images/mercado-pago.png" alt="mercado-pago-icon">
-                <p>Continue with Mercado Pago</p>
-            </button>
-        </form>
+    <!-- Payment Details -->
+    <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
+    <h2>
+        <%= course.title %>
+    </h2>
+    <div>
+        <p>Instructor: <%= course.instructor %>
+        </p>
+        <p>Duration: <%= course.length %>
+        </p>
+        <p class="price-text">USD<%= course.usd_price %> | ARS<%= course.ars_price %>
+        </p>
     </div>
-</body>
-</html>
+</div>
+
+<div class='payment-options'>
+    <!--course enroll-->
+    <!-- The form to trigger the payment -->
+    <form action="/api/create-order-paypal?courseId=<%= course.id %>" method="POST">
+        <!-- Hidden input to pass the course slug to the server -->
+        <input type="hidden" name="courseId" value="<%= course.id %>">
+        <input type="hidden" name="userId" value="<%= userId %>">
+        <button type="submit">
+            <img src="/images/paypal.png" alt="paypal-icon">
+            <p>Continue with Paypal</p>
+        </button>
+    </form>
+    <form action="/api/create-order-mp?courseId=<%= course.id %>" method="POST">
+        <!-- Hidden input to pass the course slug to the server -->
+        <input type="hidden" name="courseId" value="<%= course.id %>">
+        <input type="hidden" name="userId" value="<%= userId %>">
+        <button type="submit">
+            <img src="/images/mercado-pago.png" alt="mercado-pago-icon">
+            <p>Continue with Mercado Pago</p>
+        </button>
+    </form>
+</div>
