--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -1,72 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="courses-container">
+  <div class="section-title">
+    <h1>All Courses</h1>
+  </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Courses</title>
-    <!-- css files -->
-    <link rel="stylesheet" href="/css/sectionTitle.css">
-    <link rel="stylesheet" href="/css/alert.css">
-    <link rel="stylesheet" href="/css/courses.css">
-    <link rel="stylesheet" href="/css/pagination.css">
-    <!-- font awesome -->
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
-    <!-- Link Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+  <div class="courses-grid">
+    <% courses.forEach((course, index)=> { %><div class="course-item">
+      <a href="/api/course/<%= course.id %>/overview">
+        <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
+        <h2><%= course.title %></h2>
+        <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %></p>
+        <p><%= course.description %></p>
+      </a>
+      <div class="course-actions">
+        <p>
+          <a href="/api/course/<%= course.id %>/update">Edit</a>
+        </p>
+        <p>
+          <a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
+        </p>
+      </div>
+    </div><% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
+  </div>
+  
+  <div class="courses-grid"><% } %> <% }); %></div>
+</div>
 
-</head>
-
-<body>
-    <%- include ('navbar') -%>
-    <%- include ('alert') -%>
-    <!-- Bootstrap JS and jQuery -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <div class="courses-container">
-        <div class="section-title">
-            <h1>All Courses</h1>
-        </div>
-        <div class="courses-grid">
-            <% courses.forEach((course, index)=> { %>
-                <div class="course-item">
-                    <a href="/api/course/<%= course.id %>/overview">
-                        <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>">
-                        <h2>
-                            <%= course.title %>
-                        </h2>
-                        <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %>
-                        </p>
-                        <p>
-                            <%= course.description %>
-                        </p>
-                    </a>
-                    <div class="course-actions">
-                        <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
-                        <p><a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
-                        </p>
-                    </div>
-                </div>
-                <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
-        </div>
-        <div class="courses-grid">
-            <% } %>
-                <% }); %>
-        </div>
-    </div>
-    <!-- Add pagination controls -->
-    <div class="pagination">
-        <!-- Math.ceil: rounds up and returns the smallest integer greater than or equal to a given number -->
-        <% for (let i=1; i <=Math.ceil(totalItems / pageSize); i++) { %>
-            <a href="/api/courses?page=<%= i %>" class="page-link">
-                <%= i %>
-            </a>
-        <% } %>
-    </div>
-
-    
-</body>
-
-</html>
+<!-- Add pagination controls -->
+<div class="pagination">
+  <!-- Math.ceil: rounds up and returns the smallest integer greater than or equal to a given number -->
+  <% for (let i=1; i <=Math.ceil(totalItems / pageSize); i++) { %>
+  <a href="/api/courses?page=<%= i %>" class="page-link"><%= i %></a>
+  <% } %>
+</div>
