--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -33,7 +33,7 @@
 </head>
 <body>
     <!-- Common header -->
-    <%- include ('navbar', { user: user }) -%>
+    <%- include ('navbar') -%>
     <%- include ('alert') -%>
     
     <!-- dynamic body-->
