--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -1,4 +1,4 @@
-<h1>Forgot Password</h1>
+<h1><%= titles %></h1>
 <form method="POST" action="/reset-password">
   <% for(let i = 0; i < fields.length; i++) { %>
     <label for="<%= fields[i] %>"></label>
