--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -1,5 +1,5 @@
 <h1 class="section-title"><%= titles %></h1>
-<form method="POST" action="/api/forgot-password">
+<form method="POST" action="<%= formAction %>">
   <% for(let i = 0; i < fields.length; i++) { %>
     <label for="<%= fields[i] %>"></label>
     <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>"><br>
