email sent template

--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -1,3 +1,4 @@
+<!-- forgotPassword.ejs -->
 <h1 class="section-title"><%= titles %></h1>
 <form method="POST" action="<%= formAction %>">
   <% for(let i = 0; i < fields.length; i++) { %>
