--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -8,3 +8,4 @@
         <input type="submit" value="Login">
     </form>
     <p><a href="/api/signup">Dont have an account yet.</a></p>
+    <p><a href="/api/forgot-password">Forgot password ?</a></p>
