--- a/src/views/templates/coursesOwned.ejs
+++ b/src/views/templates/coursesOwned.ejs
@@ -10,14 +10,17 @@
           <h2><%= course.title %></h2>
           <p><%= course.description %></p>
         </a>
-        <div>
-          <p>
-            <a href="/api/course/<%= course.id %>/update">Edit</a>
-          </p>
-          <p>
-            <a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
-          </p>
-        </div>
+        <% if (isAdmin) {%>
+          <div class="course-actions">
+            <p>
+              <a href="/api/course/<%= course.id %>/update">Edit</a>
+            </p>
+            <p>
+              <a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
+            </p>
+          </div>
+        <% } %>
+
       </div>
       <% if ((index + 1) % 4 === 0 && index !== courses.length - 1) { %>
         </div>
