--- a/src/views/templates/courseDelete/courseDeleteConfirmation.ejs
+++ b/src/views/templates/courseDelete/courseDeleteConfirmation.ejs
@@ -1,5 +1,5 @@
 
-    <h3>Are you sure you want to delete <%= course.title %>?</h3>
+    <h3>Are you sure you want to delete course: <%= course.title %>?</h3>
     <form method="POST" action="/api/course/<%= course.id %>/delete">
         <input type="hidden" name="_method" value="DELETE">
         <input type="hidden" name="courseId" value="<%= course.id %>">
