--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -8,6 +8,7 @@
       <div class="course-item">
         <a href="/api/course/<%= course.id %>/overview">
           <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
+          <p><%= course.author %></p>
           <h2><%= course.title %></h2>
           <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %></p>
           <p><%= course.description %></p>
