courseId authorId on courseCerate

--- a/src/views/templates/courseCreate/courseCreate.ejs
+++ b/src/views/templates/courseCreate/courseCreate.ejs
@@ -41,7 +41,7 @@
                     <input type="number" id="length" name="length" style="width: 80px;"><br><br>
                 </div>
             </div>
-
+            <input type="hidden" name="author" value="<%= user %>">  
             <button type="submit">Create Course</button>
 
             <!-- Display error message -->
