--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -1,55 +1,66 @@
 <nav class="navbar navbar-expand-lg bg-body-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
 
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/api/courses"><i class="fas fa-book"></i> Courses</a>
+        </li>
+
+        <!-- signedin links -->
+        <% if (user && user.name) { %>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api/courses"><i class="fas fa-book"></i> Courses</a>
+            <a class="nav-link" href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a>
           </li>
 
-          <!-- signedin links -->
-          <% if (user && user.name) { %>
-            <li class="nav-item">
-                <a class="nav-link" href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a>
-            </li>
-
-            <!-- admin links -->
-            <% if (user.role === "admin") { %>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-users-gear"></i>
-                     Admin Settings
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Create course</a></li>
-                      <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Users panel</a></li>
-                    </ul>
+          <!-- admin links -->
+          <% if (user.role==="admin" ) { %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false"><i class="fa-solid fa-users-gear"></i>
+                Admin Settings
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Create
+                    course</a></li>
+                <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Users panel</a>
                 </li>
+              </ul>
+            </li>
             <% } %>
-            <!-- sign out -->
-            <li class="nav-item">
-                <a class="nav-link" href="/api/logout"><i class="fa-solid fa-right-from-bracket"></i> Signout</a>
-            </li>
-          <% } else { %>
-            <!-- sign in -->
-            <li class="nav-item">
-              <a class="nav-link" href="/api/login"><i class="fas fa-graduation-cap"></i><i class="fas fa-sign-in-alt"></i> Signin</a>
-            </li>
-            <!-- sign up -->
-            <li class="nav-item">
-                <a class="nav-link" href="/api/signup"><i class="fas fa-graduation-cap"></i><i class="fas fa-user-plus"></i> Signup</a>
-            </li>
-          <% } %>
-        
+              <!-- sign out -->
+              <% if (user) { %>
+                <!-- If user is signed in, display the circular avatar -->
+                <a class="nav-link" href="/api/logout">
+                  <!-- Add a placeholder image for the avatar -->
+                  <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
+                  Signout
+                </a>
+                  <% } %>
+                    <% } else { %>
+                      <!-- sign in -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="/api/login"><i class="fas fa-graduation-cap"></i><i
+                            class="fas fa-sign-in-alt"></i> Signin</a>
+                      </li>
+                      <!-- sign up -->
+                      <li class="nav-item">
+                        <a class="nav-link" href="/api/signup"><i class="fas fa-graduation-cap"></i><i
+                            class="fas fa-user-plus"></i> Signup</a>
+                      </li>
+                      <% } %>
 
-        
-        </ul>
-      </div>
+
+
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
