user update bones

--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <% } %>
-              <!-- sign out -->
+              <!-- sign out a-->
               <% if (user) { %>
                 <a class="nav-link" href="/api/user-update/<%= user.id %>">
                   <!-- Add a placeholder image for the avatar -->
