--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -1,9 +1,18 @@
 <!-- forgotPassword.ejs -->
 <h1 class="section-title"><%= titles %></h1>
-<form method="POST" action="<%= formAction %>">
+<% if (subtitle) { %>
+  <p class="subtitle"><%= subtitle %></p>
+<% } %>
+<form method="POST" action="<%= formAction %>" enctype="multipart/form-data">
   <% for(let i = 0; i < fields.length; i++) { %>
-    <label for="<%= fields[i] %>"></label>
-    <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>"><br>
+    <% if (fields[i] !== 'avatar') { %><!--avatar is for userUpdate template-->
+      <label for="<%= fields[i] %>" class="label"><%= labels[i] %>:</label>
+      <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>"><br>
+    <% } %>
+  <% } %>
+  <% if (fields.includes('avatar')) { %> <!-- Check if avatar field exists -->
+    <label for="avatar" class="label-avatar">Avatar:</label><br>
+    <input type="file" id="avatar" name="avatar"><br><br>
   <% } %>
   <button type="submit"><%= submitBtn %></button>
 </form>
