update user with email TOKEN

--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -6,7 +6,7 @@
 <form method="POST" action="<%= formAction %>" enctype="multipart/form-data">
   <% for(let i = 0; i < fields.length; i++) { %>
     <% if (fields[i] !== 'avatar') { %><!--avatar is for userUpdate template-->
-      <label for="<%= fields[i] %>" class="label"><%= labels[i] %>:</label>
+      <label for="<%= fields[i] %>" class="label"><%= labels[i] %></label>
       <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>"><br>
     <% } %>
   <% } %>
