--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -38,7 +38,7 @@
             <% } %>
               <!-- sign out a-->
               <% if (user) { %>
-                <a class="nav-link" href="/api/user-update/<%= user.id %>">
+                <a class="nav-link" href="/api/user-update/<%= user.id %>/confirm">
                   <!-- Add a placeholder image for the avatar -->
                   <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
                   Update Profile
