updated_at course formatted

--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -39,6 +39,7 @@
     <!-- COURSE DETAIL -->
     <!-- ========================================================= -->
     <div>
+        <p><%= course.updated_at %></p>
         <div>
             <h1>
                 <%= course.title %>
