render courses Fix

--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -9,7 +9,7 @@
         <a href="/api/course/<%= course.id %>/overview">
           <p><%= course.updated_at %></p>
           <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
-          <p><%= course.author %></p>
+          <p class="author"><%= course.author %></p>
           <h2><%= course.title %></h2>
           <p>USD <%= course.usd_price %> | ARS <%= course.ars_price %></p>
           <p><%= course.description %></p>
