--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -7,12 +7,15 @@
   <% for(let i = 0; i < fields.length; i++) { %>
     <% if (fields[i] !== 'avatar') { %><!--avatar is for userUpdate template-->
       <label for="<%= fields[i] %>" class="label"><%= labels[i] %></label>
-      <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>"><br>
+      <input type="text" id="<%= fields[i] %>" name="<%= fields[i] %>" placeholder="<%= fields[i] %>" value="<%= values[i] %>"><br>
     <% } %>
   <% } %>
   <% if (fields.includes('avatar')) { %> <!-- Check if avatar field exists -->
     <label for="avatar" class="label-avatar">Avatar:</label><br>
-    <input type="file" id="avatar" name="avatar"><br><br>
+    <div class="avatar-uploader">
+      <img src="<%=user.avatar%>" class="avatar-profile" alt="user-avatar">
+      <input type="file" id="avatar" name="avatar"><br><br>
+    </div>
   <% } %>
   <button type="submit"><%= submitBtn %></button>
 </form>
